logs/foobar_ok.log
ESBMC version 7.10.0 64-bit x86_64 linux
Target: 64-bit little-endian x86_64-unknown-linux with esbmclibc
Parsing tests/test_foobar_ok.c
In file included from tests/test_foobar_ok.c:1:
In file included from include/arduino_foobar.h:4:
include/esbmc.h:8:13: error: conflicting types for '__ESBMC_assert'
    8 | extern void __ESBMC_assert(int cond, const char *msg);
      |             ^
esbmc_intrinsics.h:2:6: note: previous declaration is here
    2 | void __ESBMC_assert(_Bool, const char *);
      |      ^
In file included from tests/test_foobar_ok.c:1:
In file included from include/arduino_foobar.h:4:
include/esbmc.h:9:13: error: conflicting types for '__ESBMC_assume'
    9 | extern void __ESBMC_assume(int cond);
      |             ^
esbmc_intrinsics.h:1:6: note: previous declaration is here
    1 | void __ESBMC_assume(_Bool);
      |      ^
In file included from tests/test_foobar_ok.c:1:
In file included from include/arduino_foobar.h:4:
include/esbmc.h:16:3: error: invalid preprocessing directive
   16 | # verifique que foi criado
      |   ^
include/esbmc.h:14:1: error: unknown type name 'EOF'
   14 | EOF
      | ^
include/esbmc.h:17:3: error: expected ';' after top level declarator
   17 | ls -l include/esbmc.h
      |   ^
      |   ;
ERROR: PARSING ERROR
